--- a/28-jupyter-server/jupyter-server.html
+++ b/28-jupyter-server/jupyter-server.html
@@ -30,7 +30,7 @@
     <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.18.0/dist/embed-amd.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Move the Jupyter Dashboards Deployment Projects from Incubator to Attic" href="../jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic.html" />
+    <link rel="next" title="Jupyter Enterprise Gateway Incorporation" href="../25-jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation.html" />
     <link rel="prev" title="Jupyter Enhancement Proposal" href="../29-jep-process/jep-process.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,6 +65,12 @@
   
   <ul class="nav sidenav_l1">
   <li class="">
+    <a href="../jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines.html">Jupyter Enhancement Proposals (JEP) Guidelines</a>
+  </li>
+<li class="navbar-special">
+<p class="margin-caption">Accepted</p>
+</li>
+  <li class="">
     <a href="../44-xeus-incorporation/xeus-incorporation.html">Xeus Incorporation</a>
   </li>
   <li class="">
@@ -76,26 +82,26 @@
   <li class="active">
     <a href="">Standalone Jupyter server enhancement</a>
   </li>
+<li class="navbar-special">
+<p class="margin-caption">Implemented</p>
+</li>
   <li class="">
-    <a href="../jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic.html">Move the Jupyter Dashboards Deployment Projects from Incubator to Attic</a>
+    <a href="../25-jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation.html">Jupyter Enterprise Gateway Incorporation</a>
   </li>
   <li class="">
-    <a href="../jupyter-dashboards-extension-incorporation/jupyter-dashboards-extension-incorporation.html">Jupyter Dashboards Extension Incorporation</a>
+    <a href="../22-jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic.html">Move the Jupyter Dashboards Deployment Projects from Incubator to Attic</a>
   </li>
   <li class="">
-    <a href="../jupyter-declarativewidgets-incorporation/jupyter-declarativewidgets-extension-incorporation.html">Jupyter DeclarativeWidgets Extension Incorporation</a>
+    <a href="../18-jupyter-declarativewidgets-incorporation/jupyter-declarativewidgets-extension-incorporation.html">Jupyter DeclarativeWidgets Extension Incorporation</a>
   </li>
   <li class="">
-    <a href="../jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines.html">Jupyter Enhancement Proposals (JEP) Guidelines</a>
+    <a href="../17-jupyter-dashboards-extension-incorporation/jupyter-dashboards-extension-incorporation.html">Jupyter Dashboards Extension Incorporation</a>
   </li>
   <li class="">
-    <a href="../jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation.html">Jupyter Enterprise Gateway Incorporation</a>
+    <a href="../12-jupyter-kernel-gateway-incorporation/jupyter-kernel-gateway-incorporation.html">Jupyter Kernel Gateway Incorporation</a>
   </li>
   <li class="">
-    <a href="../jupyter-kernel-gateway-incorporation/jupyter-kernel-gateway-incorporation.html">Jupyter Kernel Gateway Incorporation</a>
-  </li>
-  <li class="">
-    <a href="../notebook-diff/notebook-diff.html">Diffing and merging notebooks</a>
+    <a href="../08-notebook-diff/notebook-diff.html">Diffing and merging notebooks</a>
   </li>
 </ul>
 </nav>
@@ -477,7 +483,7 @@ Kernel Gateway can use the new Jupyter Server to server kernels as a service. Th
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../29-jep-process/jep-process.html" title="previous page">Jupyter Enhancement Proposal</a>
-    <a class='right-next' id="next-link" href="../jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic.html" title="next page">Move the Jupyter Dashboards Deployment Projects from Incubator to Attic</a>
+    <a class='right-next' id="next-link" href="../25-jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation.html" title="next page">Jupyter Enterprise Gateway Incorporation</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
