--- a/44-xeus-incorporation/xeus-incorporation.html
+++ b/44-xeus-incorporation/xeus-incorporation.html
@@ -31,7 +31,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Voilà Incorporation" href="../42-voila-incorporation/voila-incorporation.html" />
-    <link rel="prev" title="Jupyter Enhancement Proposals" href="../README.html" />
+    <link rel="prev" title="Jupyter Enhancement Proposals (JEP) Guidelines" href="../jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -64,6 +64,12 @@
 <nav class="bd-links" id="bd-docs-nav" aria-label="Main navigation">
   
   <ul class="nav sidenav_l1">
+  <li class="">
+    <a href="../jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines.html">Jupyter Enhancement Proposals (JEP) Guidelines</a>
+  </li>
+<li class="navbar-special">
+<p class="margin-caption">Accepted</p>
+</li>
   <li class="active">
     <a href="">Xeus Incorporation</a>
   </li>
@@ -76,26 +82,26 @@
   <li class="">
     <a href="../28-jupyter-server/jupyter-server.html">Standalone Jupyter server enhancement</a>
   </li>
+<li class="navbar-special">
+<p class="margin-caption">Implemented</p>
+</li>
   <li class="">
-    <a href="../jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic.html">Move the Jupyter Dashboards Deployment Projects from Incubator to Attic</a>
+    <a href="../25-jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation.html">Jupyter Enterprise Gateway Incorporation</a>
   </li>
   <li class="">
-    <a href="../jupyter-dashboards-extension-incorporation/jupyter-dashboards-extension-incorporation.html">Jupyter Dashboards Extension Incorporation</a>
+    <a href="../22-jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic.html">Move the Jupyter Dashboards Deployment Projects from Incubator to Attic</a>
   </li>
   <li class="">
-    <a href="../jupyter-declarativewidgets-incorporation/jupyter-declarativewidgets-extension-incorporation.html">Jupyter DeclarativeWidgets Extension Incorporation</a>
+    <a href="../18-jupyter-declarativewidgets-incorporation/jupyter-declarativewidgets-extension-incorporation.html">Jupyter DeclarativeWidgets Extension Incorporation</a>
   </li>
   <li class="">
-    <a href="../jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines.html">Jupyter Enhancement Proposals (JEP) Guidelines</a>
+    <a href="../17-jupyter-dashboards-extension-incorporation/jupyter-dashboards-extension-incorporation.html">Jupyter Dashboards Extension Incorporation</a>
   </li>
   <li class="">
-    <a href="../jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation.html">Jupyter Enterprise Gateway Incorporation</a>
+    <a href="../12-jupyter-kernel-gateway-incorporation/jupyter-kernel-gateway-incorporation.html">Jupyter Kernel Gateway Incorporation</a>
   </li>
   <li class="">
-    <a href="../jupyter-kernel-gateway-incorporation/jupyter-kernel-gateway-incorporation.html">Jupyter Kernel Gateway Incorporation</a>
-  </li>
-  <li class="">
-    <a href="../notebook-diff/notebook-diff.html">Diffing and merging notebooks</a>
+    <a href="../08-notebook-diff/notebook-diff.html">Diffing and merging notebooks</a>
   </li>
 </ul>
 </nav>
@@ -307,7 +313,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../README.html" title="previous page">Jupyter Enhancement Proposals</a>
+    <a class='left-prev' id="prev-link" href="../jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines.html" title="previous page">Jupyter Enhancement Proposals (JEP) Guidelines</a>
     <a class='right-next' id="next-link" href="../42-voila-incorporation/voila-incorporation.html" title="next page">Voilà Incorporation</a>
 
     </div>
